--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
             integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
             crossorigin="anonymous" />
-        <link rel="shortcut icon" href="./dist/fable.ico" />
+        <link rel="shortcut icon" href="fable.ico" />
     </head>
     <body>
         <div id="elmish-app"></div>
